docs:Add level-test.md to includes update

--- a/kizi/2018-10/1주차/1.html
+++ b/kizi/2018-10/1주차/1.html
@@ -1,4 +1,6 @@
 <!-- 수업자료 -->
+설명듣고 만들어보기. 중요!! 꼭 스스로 만들어봐야함
+들으면 까먹고 보면 기억하고 사용하면 이해한다.
 
 <!-- 수업 -->
 
@@ -11,7 +13,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <base href="./img" target="_blank">
+  <base href="http:/www.google." target="_blank">
 </head>
 
 <body>
@@ -75,26 +77,46 @@
 
   <h2>audio</h2>
   <audio controls>
-      <source src="horse.ogg" type="audio/ogg">
-      <source src="horse.mp3" type="audio/mpeg">
-      Your browser does not support the audio tag.
-    </audio>
-    <p>MP3	audio/mpeg <br>
-      OGG	audio/ogg <br>
-      WAV	audio/wav</p>
-    <hr>
+    <source src="horse.ogg" type="audio/ogg">
+    <source src="horse.mp3" type="audio/mpeg"> Your browser does not support the audio tag.
+  </audio>
+  <p>MP3 audio/mpeg
+    <br> OGG audio/ogg
+    <br> WAV audio/wav</p>
+  <hr>
 
   <h2>b</h2>
-  <p>This is normal text - <b>and this is bold text</b>.</p>
+  <p>This is normal text -
+    <b>and this is bold text</b>.</p>
   <hr>
 
 
   <h2>base</h2>
-      head 태그의 base 참조
-    <img src="/ss" alt="">
+  head 태그의 base 참조
+  <a href="base!">클릭</a>
 
+  <h2>bdo</h2>
+  <bdo dir="rtl">
+    This text will go right-to-left.
+  </bdo>
 
+  <h2>blockquote</h2>
+  <blockquote cite="http://www.worldwildlife.org/who/index.html">
+    For 50 years, WWF has been protecting the future of nature. The world's leading conservation organization, WWF works in 100 countries and is supported by 1.2 million members in the United States and close to 5 million globally.
+    </blockquote>
 
+  <h2>button</h2>
+
+  <button type="button">Click Me!</button>
+  <p>autofocus</p>
+  <p> disabled </p>
+  <p> ☆ form 엣지사용 x</p>
+  <p> formaction</p>
+  <p> name</p>
+  <p> type</p>
+  <p> value</p>
+  <button type="submit">Submit</button>
+  <button type="submit" formmethod="post">Submit using POST</button>
 
 
 </body>
