--- a/sam2/1주차/1.html
+++ b/sam2/1주차/1.html
@@ -7,6 +7,13 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <form action="삼이/abc" method="post">
+    <input type="text" name="idname">
+    <input type="password" name="namepw">
+    <button type="submit">전송</button>
+</form>
+
+
+<form action=""></form>
 </body>
 </html>
